load("@rules_python//python:defs.bzl", "py_test")
load("@python_deps//:requirements.bzl", "requirement")


py_test(
    name = "simple_run",
    srcs = ["simple_run.py"],
    deps = [
        # Add any dependencies your test requires, e.g.,
        # "//my_project/my_module:my_library",
        # "@my_python_deps//:pytest", # if using pytest
        # "//hmlib:hmlib",
    ],
)

py_test(
    name = "test_unified_config",
    srcs = ["test_unified_config.py"],
    data = [
        "//hmlib:wheel_data_files",  # include YAMLs under hmlib/**
    ],
)

py_test(
    name = "test_dataframe_samples",
    srcs = ["test_dataframe_samples.py"],
    data = [
        "//hmlib:wheel_data_files",
    ],
    deps = [
        requirement("pytest"),
    ],
)

py_test(
    name = "test_tracking_pose_load_tracking",
    srcs = ["test_tracking_pose_load_tracking.py"],
    data = [
        "//hmlib:wheel_data_files",
    ],
    deps = [
        requirement("pytest"),
    ],
)

py_test(
    name = "test_webapp_hockey",
    srcs = ["test_webapp_hockey.py"],
)

py_test(
    name = "test_box_equivalence",
    srcs = ["test_box_equivalence.py"],
    data = [
        "//hmlib:wheel_data_files",
    ],
)

py_test(
    name = "test_bytetrack_cuda",
    srcs = ["test_bytetrack_cuda.py"],
    deps = [
        "//hockeymom:hockeymom",
    ],
)

py_test(
    name = "test_stream_tensorx",
    srcs = ["test_stream_tensorx.py"],
)

py_test(
    name = "test_sideband_queue",
    srcs = ["test_sideband_queue.py"],
)

py_test(
    name = "test_pynvcodec_writer",
    srcs = ["test_pynvcodec_writer.py"],
    deps = [
        "//hmlib:hmlib.lib",
        requirement("pytest"),
    ],
)

py_test(
    name = "test_jersey_tracker",
    srcs = ["test_jersey_tracker.py"],
    deps = [
        "//hmlib:hmlib.lib",
        requirement("pytest"),
    ],
)

py_test(
    name = "test_jersey_koshkina_side_view",
    srcs = ["test_jersey_koshkina_side_view.py"],
    deps = [
        "//hmlib:hmlib.lib",
        requirement("pytest"),
    ],
)

py_test(
    name = "test_jersey_pose_plugin_rois",
    srcs = ["test_jersey_pose_plugin_rois.py"],
    deps = [
        "//hmlib:hmlib.lib",
        requirement("pytest"),
    ],
)

py_test(
    name = "test_show_scaled_implies_show",
    srcs = ["test_show_scaled_implies_show.py"],
    deps = [
        "//hmlib:hmlib.lib",
        requirement("pytest"),
    ],
)
