load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@py_soabi//:soabi.bzl", "SOABI")  # Now this load will succeed

ROCM_COMPAT_COPTS = select({
    "//bazel:torch_backend_rocm": [
        "-DUSE_HIP",
        "-DJETSON_USE_HIP",
        "-DJUT_INCLUDE_HIP_HEADERS",
        "-DC10_CUDA_NO_CMAKE_CONFIGURE_FILE",
        "-isystem",
        "external/rocm_sdk_includes/include",
    ],
    "//conditions:default": [],
})

pybind_extension(
  name = "_hockeymom",
  srcs = [
    "PythonBindings.cpp",
  ],
  deps = [
    "//hockeymom/csrc/bytetrack:bytetrack",
    "//hockeymom/csrc/df:df_tracker",
    "//hockeymom/csrc/pytorch:pytorch_stitch",
    "//hockeymom/csrc/kmeans:kmeans",
    "//hockeymom/csrc/play_tracker:play_tracker",
    "//hockeymom/csrc/ui:hm_render_set",
    "@libtorch//:libtorch_python",
    "@hm-cupano//src/pano:cuda_pano",
    "@hm-cupano//src/pano:cuda_pano_n",
    "@jetson-utils//cuda:colorspace_lib",
  ],
  copts = [
    "-DNO_CPP_BLENDING=1",
  ] + ROCM_COMPAT_COPTS,
  visibility = ["//visibility:public"],
)
