load("@rules_cuda//cuda:defs.bzl", "requires_cuda")
load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "hockeymom/csrc/bytetrack"
CUDA_ONLY_COMPAT = select({
    "//bazel:torch_backend_rocm": ["@platforms//:incompatible"],
    "//conditions:default": [],
}) + requires_cuda()

cc_library(
    name = "bytetrack",
    srcs = [
        "BYTETracker.cpp",
        "BYTETrackerCuda.cpp",
        "BYTETrackerCudaStatic.cpp",
        "BaseTracker.cpp",
        "HmTracker.cpp",
        "STrack.cpp",
        "Utils.cpp",
    ],
    hdrs = [
        "BYTETracker.h",
        "BYTETrackerCuda.h",
        "BYTETrackerCudaStatic.h",
        "BaseTracker.h",
        "HmTracker.h",
        "STrack.h",
        "Utils.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
    target_compatible_with = CUDA_ONLY_COMPAT,
    deps = [
        "@libtorch",
        "//hockeymom/csrc/pytorch:bytetrack_cuda_ops",
        ":bytetrack_lib",
    ],
)

cc_test(
    name = "byte_tracker_cuda_test",
    srcs = ["byte_tracker_cuda_test.cpp"],
    target_compatible_with = CUDA_ONLY_COMPAT,
    deps = [
        ":bytetrack",
        "//hockeymom/csrc/pytorch:bytetrack_cuda_ops",
        "@libtorch",
    ],
)

cc_library(
    name = "bytetrack_lib",
    srcs = [
        "BYTETrackerUtils.cpp",
        "KalmanFilter.cpp",
        "Lapjv.cpp",
        "Tracker.cpp",
    ],
    hdrs = [
        "KalmanFilter.h",
        "Lapjv.h",
        "Tracker.h",
    ],
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    defines = [
        # Match the ABI used by the vendored PyTorch wheels.
        "_GLIBCXX_USE_CXX11_ABI=1",
    ],
    deps = [
        "@eigen",
    ],
)
