load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "hockeymom/csrc/df"

cc_library(
    name = "df_tracker",
    srcs = ["DfTrackerCudaStatic.cpp"],
    hdrs = ["DfTrackerCudaStatic.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "@libtorch",
        "//hockeymom/csrc/bytetrack:bytetrack",
        "//hockeymom/csrc/pytorch:bytetrack_cuda_ops",
    ],
)
