load("@rules_cc//cc:defs.bzl", "cc_library")

INCLUDE_PREFIX = "hockeymom/csrc/play_tracker"

cc_library(
    name = "play_tracker",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    include_prefix = INCLUDE_PREFIX,
    visibility = ["//visibility:public"],
    defines = [
        # Match the ABI used by the vendored PyTorch wheels.
        "_GLIBCXX_USE_CXX11_ABI=0",
    ],
    copts = [
        "-fopenmp",
        "-fPIC",
        "-Wno-error=comment",
    ],
    deps=[
      "//hockeymom/csrc/kmeans:kmeans",
    ]
)
