load("@rules_cuda//cuda:defs.bzl", "cuda_library")

config_setting(
    name = "glibc_math_rsqrt_conflict",
    define_values = {
        "glibc_math_rsqrt_conflict": "1",
    },
)

cc_library(
    name = "pytorch_stitch",
    srcs = glob(
        ["*.cpp"],
        exclude = ["bytetrack_cuda_ops.cpp"],
    ),
    hdrs = glob(
        ["*.h"],
        exclude = ["bytetrack_cuda_ops.h"],
    ),
    copts = [
        "-fopenmp",
        "-fPIC",
        "-Wno-error=comment",
    ],
    includes=[
      ".",
    ],
    visibility = ["//visibility:public"],
    deps = [
      "@libtorch",
      "@local_cuda//:cuda_runtime",
    ],
)

cuda_library(
    name = "bytetrack_cuda_ops",
    srcs = [
        "bytetrack_cuda_ops.cpp",
        "bytetrack_cuda_kernels.cu",
    ],
    hdrs = ["bytetrack_cuda_ops.h"],
    features = [
        "-coverage",
    ],
    copts = select({
        ":glibc_math_rsqrt_conflict": [
            "-Xcompiler=-U_GNU_SOURCE",
            "-Xcompiler=-D_POSIX_C_SOURCE=200809L",
            "-Xcompiler=-D_XOPEN_SOURCE=700",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@libtorch",
        "@local_cuda//:cuda_runtime",
    ],
)
