load("@rules_cuda//cuda:defs.bzl", "cuda_library", "requires_cuda")

CUDA_ONLY_COMPAT = select({
    "//bazel:torch_backend_rocm": ["@platforms//:incompatible"],
    "//conditions:default": [],
}) + requires_cuda()

cc_library(
    name = "pytorch_stitch",
    srcs = glob(
        ["*.cpp"],
        exclude = ["bytetrack_cuda_ops.cpp"],
    ),
    hdrs = glob(
        ["*.h"],
        exclude = ["bytetrack_cuda_ops.h"],
    ),
    copts = [
        "-fopenmp",
        "-fPIC",
        "-Wno-error=comment",
    ],
    includes=[
      ".",
    ],
    visibility = ["//visibility:public"],
    target_compatible_with = CUDA_ONLY_COMPAT,
    deps = [
      "@libtorch",
      "@rules_cuda//cuda:runtime",
    ],
)

cuda_library(
    name = "bytetrack_cuda_ops",
    srcs = [
        "bytetrack_cuda_ops.cpp",
        "bytetrack_cuda_kernels.cu",
    ],
    hdrs = ["bytetrack_cuda_ops.h"],
    features = [
        "-coverage",
    ],
    visibility = ["//visibility:public"],
    target_compatible_with = CUDA_ONLY_COMPAT,
    deps = [
        "@libtorch",
    ],
)
